[package]
name = "gnss_tec_core"
version = "0.4.1"
edition = "2024"
description = "Optimized RINEX file parser for the pygnss-tec Python package."
license = "MIT"

[lib]
crate-type = ["cdylib"]
name = "gnss_tec_core"

[dependencies]
arrow = { version = "57.1.0", default-features = false, features = ["pyarrow"] }
pyo3 = { version = "0.26", features = ["abi3-py310", "extension-module"] }
rayon = "1.11.0"
rinex = { version = "0.22.0", features = ["flate2", "nav", "qc"] }
rustc-hash = "2.1.1"

[target.'cfg(target_family = "unix")'.dependencies]
tikv-jemallocator = { version = "0.6", optional = true }

[target.'cfg(target_family = "windows")'.dependencies]
mimalloc = { version = "0.1", optional = true }

[features]
default = []
custom-alloc = ["mimalloc", "tikv-jemallocator"]

[profile.release]
opt-level = 3
strip = "symbols"
lto = "thin"
panic = "abort"
codegen-units = 1
